--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@magidoc/plugin-svelte-marked": "^4.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/marked": "^5.0.0",
 		"autoprefixer": "^10.4.14",
+		"marked": "^5.0.3",
 		"postcss": "^8.4.23",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
